[tool.poetry]
name = "gst"
version = "0.2.1"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
"delegator.py" = "^0.1.1"
decorator = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
ipython = "^7.2"
sphinx = "^1.8"
nbsphinx = "^0.4.2"
recommonmark = "^0.5.0"
pre-commit = "^1.14"
mypy = "^0.660.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
sphinx-autodoc-typehints = "^1.6"
pudb = "^2018.1"
pytest-cov = "^2.6"
pytest-mock = "^1.10"
detect-secrets = "^0.11.4"
flake8-black = "^0.0.1"
bump2version = "^0.5.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
